--- a/tem/src/main/resources/templates/edit-conducente.html
+++ b/tem/src/main/resources/templates/edit-conducente.html
@@ -33,7 +33,8 @@
 			
 			
 			<div>
-				<button type="submit" class="update2">Modifica conducente</button> 
+				<button type="submit" class="update" style=" margin-top:40px;
+	margin-left:203px;">Modifica conducente</button> 
 			</div>
 		
 		</form>
