--- a/tem/src/main/resources/static/css/style.css
+++ b/tem/src/main/resources/static/css/style.css
@@ -3,6 +3,25 @@ html,body {
   padding: 0;
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background:#01000f; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
 input:focus,
 select:focus,
 textarea:focus,
@@ -154,8 +173,9 @@ a:hover {
 .logo{
   position: absolute;
   top: 20px;
-  left: 550px;
+  left:200px;
   bottom:0px;
+  margin-left:500px;
 }
 img {
 	width: 100%;
