--- a/tem/src/main/resources/static/css/style2.css
+++ b/tem/src/main/resources/static/css/style2.css
@@ -36,8 +36,9 @@ label {
 .logo{
   position: absolute;
   top: 20px;
-  left: 610px;
+  left:200px;
   bottom:0px;
+  margin-left:480px;
 }
 
 .animazione1{
@@ -106,7 +107,7 @@ label {
 
 
 .colonna{
-	margin-left: 140px;
+	margin-left: 130px;
 	margin-top:80px;
     -webkit-animation: fadeIn ease 4s;
  	-moz-animation: fadeIn ease 4s;
@@ -125,6 +126,16 @@ label {
   	animation: left_to_right2 4s ease;
 	width:300%;
 }
+
+.colonna5{
+	margin-left: 120px;
+	margin-top:80px;
+    -webkit-animation: fadeIn ease 4s;
+ 	-moz-animation: fadeIn ease 4s;
+  	-o-animation: fadeIn ease 4s;
+ 	-ms-animation: fadeIn ease 4s;
+	animation: left_to_right 4s ease;
+}
 .bus{
 	margin-left:270px;
 	margin-top:155px;
@@ -134,6 +145,13 @@ label {
 
 }
 
+.generazione{
+	margin-left:260px;
+	margin-top:100px;
+	padding-bottom:0px;
+	padding-top:-20px;
+	margin-bottom:230px;
+}
 /*inserisci risorse*/
 .colonna1{
 	margin-left: 170px;
@@ -238,7 +256,7 @@ hr {
     border: 2px solid #ff6600;
     padding:7px;
     margin-top:40px;
-	margin-left:110px;
+	margin-left:30px;
 	border-radius: 3px;
 }
 
@@ -266,7 +284,7 @@ hr {
    
 		 
 }
-input[type=text], input[type=time], input[type=number]{
+input[type=text], input[type=time], input[type=number],input[type=date]{
   border: none;
   border-bottom: 1px solid #4d94ff;
   padding:10px;
@@ -276,7 +294,7 @@ input[type=text], input[type=time], input[type=number]{
   color:white;
 }
 
-input[type=text], input[type=time]:focus {
+input[type=text], input[type=time], input[type=date]:focus {
 	width: 55%;
 }
 
@@ -368,9 +386,52 @@ button:focus {
 	background: white;
 }
 
+.row2{
+	margin-left:-90px;
+}
+
 .row{
 	margin-left:170px;
 }
+
+.select{
+	background-color: #01010e; 
+	 border: 1px solid #ff6600;
+	 color:white;
+	 padding:5px;
+	 margin:8px;
+	 transition: width 0.6s ease-in-out;
+}
+
+.select:focus{
+	border: 2.5px solid #ff6600;
+	width:50%;
+}
+
+.opzioni:hover{
+	background-color: #993d00;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background:#01000f; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
+
 
 .update{
 	background-color: #01010e; 
@@ -404,6 +465,15 @@ button:focus {
 	background-color:#ff6600;
 	transition-duration: 0.4s;
     cursor: pointer;	 
+}
+
+.delete{
+	border:none;
+	border-color:white;
+}
+.iconify{
+	margin-top:8px;
+	width:23px;height:23px;
 }
 html{-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}
 article,aside,details,figcaption,figure,footer,header,main,menu,nav,section{display:block}summary{display:list-item}
