--- a/tem/src/main/resources/templates/header.html
+++ b/tem/src/main/resources/templates/header.html
@@ -9,7 +9,7 @@
 
 <div class="header fixed-header" th:fragment="header">
  <a  href="/">
-    <img id="logo" src="img/logo2.png" th:src="@{/img/logo2.png}" alt="logo" style="width:265px;height:44px;"></img>
+    <img id="logo" src="img/logo2.png" th:src="@{/img/logo2.png}" alt="logo" style="width:265px;height:44px;width:265px;height:44px;margin-left:150px;"></img>
  </a>
 </div>
 
