--- a/tem/src/main/resources/templates/home-programma-corse.html
+++ b/tem/src/main/resources/templates/home-programma-corse.html
@@ -22,7 +22,7 @@
 <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
     <!-- Avatar image in top left corner -->
 
-    <a href="/home" class="w3-bar-item w3-button w3-padding-large w3-black">
+    <a href="/home" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
         <i><img src"img/home.png" th:src="@{/img/user.png}" alt="user" style="width:40px;height:40px;"/></i>
         <p>AREA UTENTE</p>
     </a>
@@ -34,7 +34,7 @@
         <i><img src"img/people.png" th:src="@{/img/people.png}" alt="people" style="width:70px;height:70px;"/></i>
         <p>INSERISCI DATI CORSE</p>
     </a>
-    <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+    <a href="/programmacorse" class="w3-bar-item w3-button w3-padding-large w3-black">
         <i><img src"img/programma.png" th:src="@{/img/programma.png}" alt="calendar" style="width:55px;height:55px;"/></i>
         <p>GENERA PROGRAMMA</p>
     </a>
@@ -50,7 +50,7 @@
         <a href="/" class="w3-bar-item w3-button" style="width:25% !important">HOME</a>
         <a href="/risorse" class="w3-bar-item w3-button" style="width:25% !important">INSERISCI RISORSE</a>
         <a href="/daticorsa/add" class="w3-bar-item w3-button" style="width:25% !important">INSERISCI DATI CORSE</a>
-        <a href="#contact" class="w3-bar-item w3-button" style="width:25% !important">GENERA UN PROGRAMMA</a>
+        <a href="/programmacorse" class="w3-bar-item w3-button" style="width:25% !important">GENERA UN PROGRAMMA</a>
     </div>
 </div>
 
@@ -58,26 +58,25 @@
 <div class="w3-padding-large" id="main">
     <!-- Header/Home -->
     <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
-        <h1 class="w3-jumbo"><span class="w3-hide-small"><p>Benvenuto <span class="w3-jumbo"style="color:#cc0000;"><b>[[${#request.userPrincipal.principal.fullName}]]</b></span></span></h1>
-        <h5>Questa è la tua area personale.</h5>
+        <h1 class="w3-jumbo"><span class="w3-hide-small"><p>Generazione <span class="w3-jumbo"><b>programma</b></span></span></h1>
+        <h5>Seleziona una modalità di generazione.</h5>
     </header>
 
     <!-- About Section -->
     <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
-        <h2 class="w3-text-light-grey">Seleziona una generazione</h2>
-        <hr style="width:200px" class="w3-opacity">
+       
         <div class="w3-half w3-margin-bottom">
-            <div class="colonna">
+            <div class="colonna5">
                 <a href="/programmacorse/insert/manuale" class="color animazione1"><h3>Generazione manuale</h3></a>
             </div>
-            <div class="colonna4">
+            <div class="colonna5">
                 <a href="#" class="color animazione2"><h3>Generazione automatica</h3></a>
             </div>
 
         </div>
         <div class="w3-half">
-            <div class="bus">
-                <img src"img/autobus.png" th:src="@{/img/autobus.png}" alt="bus" style="width:130px;height:130px;"/>
+            <div class="generazione">
+                <img src"img/generazione.gif" th:src="@{/img/generazione.gif}" alt="generazione" style="width:150px;height:150px;"/>
             </div>
         </div>
         <!-- Contact Section -->
@@ -90,7 +89,7 @@
                 <p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Telefono: +39 082587650</p>
                 <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: TransportEfficiencyManager@gmail.com</p>
             </div><br>
-            <p>Inviaci una mail per richiedere ulteriori informazioni.</p>
+            <p style="color: white;font-size:20px;font-weight:bold;">Inviaci una mail per richiedere ulteriori informazioni.</p>
 
             <form action="/action_page.php" target="_blank">
                 <p><input class="w3-input w3-padding-16" type="text" placeholder="Nome" required name="Name"></p>
