--- a/tem/src/main/resources/templates/insert-programmacorse-manuale.html
+++ b/tem/src/main/resources/templates/insert-programmacorse-manuale.html
@@ -26,7 +26,7 @@
         <i><img src"img/home.png" th:src="@{/img/user.png}" alt="user" style="width:40px;height:40px;"/></i>
         <p>AREA UTENTE</p>
     </a>
-    <a href="/risorse" class="w3-bar-item w3-button w3-padding-large w3-black" >
+    <a href="/risorse" class="w3-bar-item w3-button w3-padding-large w3-hover-black" >
         <i><img src"img/bus.png" th:src="@{/img/bus.png}" alt="bus" style="width:55px;height:55px;"/></i>
         <p>INSERISCI RISORSE</p>
     </a>
@@ -34,7 +34,7 @@
         <i><img src"img/people.png" th:src="@{/img/people.png}" alt="people" style="width:55px;height:55px;"/></i>
         <p>INSERISCI DATI CORSE</p>
     </a>
-    <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+    <a href="/programmacorse" class="w3-bar-item w3-button w3-padding-large w3-black">
         <i><img src"img/programma.png" th:src="@{/img/programma.png}" alt="calendar" style="width:55px;height:55px;"/></i>
         <p>GENERA PROGRAMMA</p>
     </a>
@@ -50,7 +50,7 @@
         <a href="/" class="w3-bar-item w3-button" style="width:25% !important">HOME</a>
         <a href="/risorse" class="w3-bar-item w3-button" style="width:25% !important">INSERISCI RISORSE</a>
         <a href="/daticorsa/add" class="w3-bar-item w3-button" style="width:25% !important">INSERISCI DATI CORSE</a>
-        <a href="#contact" class="w3-bar-item w3-button" style="width:25% !important">GENERA UN PROGRAMMA</a>
+        <a href="/programmacorse" class="w3-bar-item w3-button" style="width:25% !important">GENERA UN PROGRAMMA</a>
     </div>
 </div>
 
@@ -59,6 +59,7 @@
     <!-- Header/Home -->
     <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
         <h1 class="w3-jumbo" style="font-size:50px;"><span class="w3-hide-small"><p>Inserimento <span class="w3-jumbo" style="color:#4d94ff;">programma corse</span> </p></span></h1>
+        <h5>Specifica il periodo di validità del programma</h5>        
     </header>
 
     <!-- form section-->
@@ -66,20 +67,18 @@
     <div class="formRisorsa">
 
         <form action="#" th:action="@{/programmacorse/manuale/submit}" th:object="${programmaCorse}" method="post">
-            <div>
+              <div class="row2">
+              <div>
+                   <label for="da"><b>Da:&nbsp;</b></label> <input type="date" th:field="${programmaCorse.inizioValidita}" class="form-control" id="da" placeholder="Data Inizio Validità" required> <span th:if="${#fields.hasErrors('inizioValidita')}" th:errors="${programmaCorse.inizioValidita}" class="text-danger"></span>
+                </div>
+                 
                 <div >
-                    <input type="date" th:field="${programmaCorse.inizioValidita}" class="form-control" id="inizioValidita" placeholder="Data Inizio Validità" required> <span th:if="${#fields.hasErrors('inizioValidita')}" th:errors="${programmaCorse.inizioValidita}" class="text-danger"></span>
+                   <label for="a"><b>A:&nbsp;</b></label> <input type="date" th:field="${programmaCorse.fineValidita}" class="form-control" id="a" placeholder="Data Fine Validità" required minlength="7"> <span th:if="${#fields.hasErrors('fineValidita')}" th:errors="${programmaCorse.fineValidita}" class="text-danger"></span>
                 </div>
-                <div >
-                    <input type="date" th:field="${programmaCorse.fineValidita}" class="form-control" id="targa" placeholder="Data Fine Validità" required minlength="7"> <span th:if="${#fields.hasErrors('fineValidita')}" th:errors="${programmaCorse.fineValidita}" class="text-danger"></span>
+                    <button type="submit" class="submit" style="margin-left:180px;" ><b>Inserisci<b></b></button>
                 </div>
-
-
-                <div>
-                    <button type="submit" class="submit" ><b>Inserisci<b></b></button>
-                </div>
-            </div>
         </form>
+        </div>
     </div>
 
 
@@ -94,7 +93,7 @@
             <p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Telefono: +39 082587650</p>
             <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: TransportEfficiencyManager@gmail.com</p>
         </div><br>
-        <p>Inviaci una mail per richiedere ulteriori informazioni.</p>
+       <p style="color: white;font-size:20px;font-weight:bold;">Inviaci una mail per richiedere ulteriori informazioni.</p>
 
         <form action="/action_page.php" target="_blank">
             <p><input class="w3-input w3-padding-16" type="text" placeholder="Nome" required name="Name"></p>
