--- a/tem/src/main/resources/templates/list-programmacorse.html
+++ b/tem/src/main/resources/templates/list-programmacorse.html
@@ -85,7 +85,7 @@
         <i><img src"img/people.png" th:src="@{/img/people.png}" alt="people" style="width:55px;height:55px;"/></i>
         <p>INSERISCI DATI CORSE</p>
     </a>
-    <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+    <a href="/programmacorse" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
         <i><img src"img/programma.png" th:src="@{/img/programma.png}" alt="calendar" style="width:55px;height:55px;"/></i>
         <p>GENERA PROGRAMMA</p>
     </a>
@@ -101,7 +101,7 @@
         <a href="/" class="w3-bar-item w3-button" style="width:25% !important">HOME</a>
         <a href="/risorse" class="w3-bar-item w3-button" style="width:25% !important">INSERISCI RISORSE</a>
         <a href="/daticorsa/add" class="w3-bar-item w3-button" style="width:25% !important">INSERISCI DATI CORSE</a>
-        <a href="#contact" class="w3-bar-item w3-button" style="width:25% !important">GENERA UN PROGRAMMA</a>
+        <a href="/programmacorse" class="w3-bar-item w3-button" style="width:25% !important">GENERA UN PROGRAMMA</a>
     </div>
 </div>
 
@@ -131,7 +131,7 @@
                         <td th:text="${programmaCorse.inizioValidita}">Data Inizio Validità</td>
                         <td th:text="${programmaCorse.fineValidita}">Data Fine Validità</td>
                         <td> <a th:href="@{/programmacorse/dettaglio/{id}(id=${programmaCorse.id})}"><span class="iconify" data-icon="ic:sharp-search" data-inline="false"></span></a></td>
-                        <td ><button class="delete_programma" th:value="${programmaCorse.id}" id="programmaCorse"><img th:src="@{/img/trash.png}" alt="delete" style="width:15px;height:15px;"/></button></td>
+                        <td ><button class="delete"  th:value="${programmaCorse.id}" id="programmaCorse"><img th:src="@{/img/trash.png}" alt="delete" style="width:15px;height:15px;"/></button></td>
                     </tr>
                 </table>
             </div>
@@ -148,7 +148,7 @@
             <p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Telefono: +39 082587650</p>
             <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: TransportEfficiencyManager@gmail.com</p>
         </div><br>
-        <p>Inviaci una mail per richiedere ulteriori informazioni.</p>
+       <p style="color: white;font-size:20px;font-weight:bold;">Inviaci una mail per richiedere ulteriori informazioni.</p>
 
         <form action="/action_page.php" target="_blank">
             <p><input class="w3-input w3-padding-16" type="text" placeholder="Nome" required name="Name"></p>
