--- a/tem/src/main/resources/templates/detail-programmacorse.html
+++ b/tem/src/main/resources/templates/detail-programmacorse.html
@@ -127,7 +127,7 @@
                         <td th:text="${corsa.linea}">Linea</td>
                         <td th:text="${corsa.conducenti}">Conducenti</td>
                         <td th:text="${corsa.mezzi}">Mezzi</td>
-                        <td ><button class="delete" th:value="${corsa.id}" id="mezzo"><img th:src="@{/img/trash.png}" alt="delete" style="width:15px;height:15px;"/></button></td>
+                        <td ><button style="border: none" class="delete_corsa" th:value="${corsa.id}" id="mezzo"><img th:src="@{/img/trash.png}" alt="delete" style="width:15px;height:15px;"/></button></td>
                     </tr>
                 </table>
             </div>
