--- a/tem/src/main/resources/templates/list-daticorsa.html
+++ b/tem/src/main/resources/templates/list-daticorsa.html
@@ -127,6 +127,7 @@ th{font-weight:bold; color:#c2c2c2; background-color: #01010e;}
 	         <th>Traffico</th>
 	      <th>     </th>
 	      <th>     </th>
+	      <th></th>
 	    </tr>
 	   <tr th:each="datiCorsa: ${datiCorse}" th:id="${datiCorsa.id}">
 						<td th:text="${datiCorsa.lineaCorsa}">Linea</td>
@@ -135,8 +136,9 @@ th{font-weight:bold; color:#c2c2c2; background-color: #01010e;}
 						<td th:text="${datiCorsa.passeggeriSaliti}">Posti occupati</td>
 						<td th:text="${datiCorsa.passeggeriNonSaliti}">Passeggeri non saliti</td>
 						<td th:text="${datiCorsa.traffico} ? 'Si' : 'No'">Traffico</td>
+						<td th:text="${datiCorsa.andata} ? 'Andata' : 'Ritorno'"></td>
 						<td><button class="delete"><a href="#" th:onclick="|popEdit(${datiCorsa.id})|"><img src"img/pen.png" th:src="@{/img/pen.png}" alt="change" style="width:15px;height:15px;"/></a></button></td>
-						<td><a class="delete" th:value="${datiCorsa.id}"><img th:src="@{/img/trash.png}" alt="delete" style="width:15px;height:15px;"/></a></td>
+						<td><button class="delete_daticorsa" style="border: none" th:value="${datiCorsa.id}"><img th:src="@{/img/trash.png}" alt="delete" style="width:15px;height:15px;"/></button></td>
 						
 						
 		</tr>
