--- a/tem/src/main/resources/templates/insert-mezzo.html
+++ b/tem/src/main/resources/templates/insert-mezzo.html
@@ -69,6 +69,15 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
                         <div>
                             <div >
                                 <input type="number" th:field="${mezzo.capienza}" class="form-control" id="capienza" placeholder="Capienza" required> <span th:if="${#fields.hasErrors('capienza')}" th:errors="*{capienza}" class="text-danger"></span>
+                                <div class="traffico"> 
+                                <label for="traffico-select">Seleziona la capienza</label>
+                                <select id="traffico-select" th:field="${mezzo.capienza}">
+								    <option value="15" th:text="15" selected="selected"></option>
+								    <option value="35" th:text="35"></option>
+								    <option value="40" th:text="40"></option>
+								    <option value="55" th:text="55"></option>
+								    <option value="85" th:text="85"></option>
+								</select></div>
                             </div>
                             <div >
                                 <input type="text" th:field="${mezzo.targa}" class="form-control" id="targa" placeholder="Targa" required minlength="7"> <span th:if="${#fields.hasErrors('targa')}" th:errors="*{targa}" class="text-danger"></span>
